<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="60dp"
        android:background="#3F51B5"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/txt_label"
            android:text="@string/txt_label"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#00BCD4"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_nameLogin"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textlogin" />

    <TextView
        android:id="@+id/textlogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/txt_enterName"
        android:textColor="#00BCD4"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:text="@string/txt_enterEmail"
        android:textColor="#00BCD4"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btmOk"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="11dp"
        android:contentDescription="@string/txt_nameEmail"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:text="@string/txt_nameEmail"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btmOk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textEmail" />

    <Button
        android:id="@+id/btmOk"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="33dp"
        android:contentDescription="@string/txt_btmOK"
        android:text="@string/txt_btmOK"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btmClean"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmail" />

    <Button
        android:id="@+id/btmClean"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="31dp"
        android:contentDescription="@string/txt_btmClean"
        android:text="@string/txt_btmClean"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btmOk" />

    <TextView
        android:id="@+id/textTotal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="44dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btmClean" />

</androidx.constraintlayout.widget.ConstraintLayout>